# SentimentAnalyser/ClientApp/swagger.json
@@ -5,6 +5,35 @@
     "version": "v1"
   },
   "paths": {
+    "/api/AntiForgeryToken": {
+      "get": {
+        "tags": [
+          "AntiForgeryToken"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Calculations/AnalyzeFile": {
       "post": {
         "tags": [
@@ -356,15 +385,12 @@
                 "type": "object",
                 "properties": {
                   "key": {
+                    "type": "integer",
+                    "format": "int32"
+                  },
+                  "values": {
                     "type": "string",
                     "nullable": true
-                  },
-                  "Text": {
-                    "type": "string",
-                    "nullable": true
-                  },
-                  "Sentiment": {
-                    "$ref": "#/components/schemas/SentimentRating"
                   }
                 }
               },
@@ -372,10 +398,7 @@
                 "key": {
                   "style": "form"
                 },
-                "Text": {
-                  "style": "form"
-                },
-                "Sentiment": {
+                "values": {
                   "style": "form"
                 }
               }
@@ -384,7 +407,24 @@
         },
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/WordModel"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/WordModel"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/WordModel"
+                }
+              }
+            }
           }
         }
       },
@@ -398,20 +438,14 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "Text": {
+                  "values": {
                     "type": "string",
                     "nullable": true
-                  },
-                  "Sentiment": {
-                    "$ref": "#/components/schemas/SentimentRating"
                   }
                 }
               },
               "encoding": {
-                "Text": {
-                  "style": "form"
-                },
-                "Sentiment": {
+                "values": {
                   "style": "form"
                 }
               }
@@ -424,17 +458,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Word"
+                  "$ref": "#/components/schemas/WordModel"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Word"
+                  "$ref": "#/components/schemas/WordModel"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Word"
+                  "$ref": "#/components/schemas/WordModel"
                 }
               }
             }
@@ -452,8 +486,8 @@
                 "type": "object",
                 "properties": {
                   "key": {
-                    "type": "string",
-                    "nullable": true
+                    "type": "integer",
+                    "format": "int32"
                   }
                 }
               },
@@ -471,17 +505,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Word"
+                  "$ref": "#/components/schemas/WordModel"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Word"
+                  "$ref": "#/components/schemas/WordModel"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Word"
+                  "$ref": "#/components/schemas/WordModel"
                 }
               }
             }
@@ -585,6 +619,10 @@
       "WordModel": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
           "text": {
             "type": "string",
             "nullable": true
@@ -620,20 +658,6 @@
               "additionalProperties": false
             },
             "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "Word": {
-        "type": "object",
-        "properties": {
-          "text": {
-            "type": "string",
-            "nullable": true
-          },
-          "sentiment": {
-            "type": "number",
-            "format": "float"
           }
         },
         "additionalProperties": false
